--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
             <p class="restaurants-headline">restaurants</p>
             <div class="restaurants-container">
                 <div class="restaurants-card">
+                    <a href="pages/restaurant-1.html">
                     <img class="restaurants-card__image" src="assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
                     <div class="restaurants-card__content">
                         <div class="restaurant-card__info">
@@ -62,8 +63,10 @@
                             <i class="fa fa-solid fa-heart fa-hover-show"></i>
                         </div>
                     </div>
+                    </a>
                 </div>    
                 <div class="restaurants-card">
+                    <a href="pages/restaurant-2.html">
                     <img class="restaurants-card__image" src="assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                     <div class="restaurants-card__content">
                         <div class="restaurant-card__info">
@@ -74,8 +77,10 @@
                             <i class="fa fa-solid fa-heart fa-hover-show"></i>
                         </div>
                     </div>
+                    </a>
                 </div>
                 <div class="restaurants-card">
+                    <a href="pages/restaurant-3.html">
                     <img class="restaurants-card__image" src="assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
                     <div class="restaurants-card__content">
                         <div class="restaurant-card__info">
@@ -86,8 +91,10 @@
                             <i class="fa fa-solid fa-heart fa-hover-show"></i>
                         </div>
                     </div>
+                    </a>
                 </div>
                 <div class="restaurants-card">
+                    <a href="pages/restaurant-4.html">
                     <img class="restaurants-card__image" src="assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                     <div class="restaurants-card__content">
                         <div class="restaurant-card__info">
@@ -98,6 +105,7 @@
                             <i class="fa fa-solid fa-heart fa-hover-show"></i>
                         </div>
                     </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -109,7 +117,7 @@
                 <li><a href="#"><i class="fa-solid fa-utensils"></i> Suggest a restaurant</a></li>
                 <li><a href="#"><i class="fa-solid fa-handshake-angle"></i> Become a partner</a></li>
                 <li><a href="#">Legal</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="mailto: abc@example.com">Contact</a></li>
             </ul>
         </div>
     </footer>
