--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,7 @@
             <p class="restaurants-headline">restaurants</p>
             <div class="restaurants-container">
                 <div class="restaurants-card">
+                    <a href="pages/restaurant-1.html">
                     <img class="restaurants-card__image" src="assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
                     <div class="restaurants-card__content">
                         <div class="restaurant-card__info">
@@ -63,8 +64,10 @@
                             <i class="fa fa-solid fa-heart fa-hover-show"></i>
                         </div>
                     </div>
+                    </a>
                 </div>    
                 <div class="restaurants-card">
+                    <a href="pages/restaurant-2.html">
                     <img class="restaurants-card__image" src="assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                     <div class="restaurants-card__content">
                         <div class="restaurant-card__info">
@@ -75,8 +78,10 @@
                             <i class="fa fa-solid fa-heart fa-hover-show"></i>
                         </div>
                     </div>
+                    </a>
                 </div>
                 <div class="restaurants-card">
+                    <a href="pages/restaurant-3.html">
                     <img class="restaurants-card__image" src="assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
                     <div class="restaurants-card__content">
                         <div class="restaurant-card__info">
@@ -87,8 +92,10 @@
                             <i class="fa fa-solid fa-heart fa-hover-show"></i>
                         </div>
                     </div>
+                    </a>
                 </div>
                 <div class="restaurants-card">
+                    <a href="pages/restaurant-4.html">
                     <img class="restaurants-card__image" src="assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                     <div class="restaurants-card__content">
                         <div class="restaurant-card__info">
@@ -99,6 +106,7 @@
                             <i class="fa fa-solid fa-heart fa-hover-show"></i>
                         </div>
                     </div>
+                    </a>
                 </div>
             </div>
         </div>
