--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
     <div class="loader-wrapper">
-        <div class="loader">
+        <div class="loader"></div>
             <div class="spinner"></div>
-        </div>
+    </div>
     <header class="primary-header">
         <img class="primary-header__logo" src="assets/logo/ohmyfood.png" alt="ohmyfood logo">
     </header>
@@ -27,99 +27,99 @@
         <p class="explore-container__item explore-container__item--text">Discover top-of-the-art restaurants we picked for you</p>
         <a href="#" class="explore-container__item main-btn explore-container__item--btn">Explore our restaurants</a>
     </div>
-    <main>
-        <div class="how-container">
-            <p class="how-container__headline">How it works</p>
-            <div class="how-container-cards">
-                <div class="how-container-cards__card how-container__card--choose">
-                    <div class="how-card-number">1</div>
-                    <div class="how-card-icon"><i class="fa-solid fa-mobile-screen"></i></div>
-                    <p>Choose a restaurant</p>
-                </div>
-                <div class="how-container-cards__card how-container__card--create">
-                    <div class="how-card-number">2</div>
-                    <div class="how-card-icon"><i class="fa-solid fa-list"></i></div>
-                    <p>Create your menu</p>
-                </div>
-                <div class="how-container-cards__card how-container__card--go">
-                    <div class="how-card-number">3</div>
-                    <div class="how-card-icon"><i class="fa-solid fa-store"></i></div>
-                    <p>Go enjoy it at the restaurant</p>
+        <main>
+            <div class="how-container">
+                <p class="how-container__headline">How it works</p>
+                <div class="how-container-cards">
+                    <div class="how-container-cards__card how-container__card--choose">
+                        <div class="how-card-number">1</div>
+                        <div class="how-card-icon"><i class="fa-solid fa-mobile-screen"></i></div>
+                        <p>Choose a restaurant</p>
+                    </div>
+                    <div class="how-container-cards__card how-container__card--create">
+                        <div class="how-card-number">2</div>
+                        <div class="how-card-icon"><i class="fa-solid fa-list"></i></div>
+                        <p>Create your menu</p>
+                    </div>
+                    <div class="how-container-cards__card how-container__card--go">
+                        <div class="how-card-number">3</div>
+                        <div class="how-card-icon"><i class="fa-solid fa-store"></i></div>
+                        <p>Go enjoy it at the restaurant</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="restaurants">
-            <p class="restaurants-headline">restaurants</p>
-            <div class="restaurants-container">
-                <div class="restaurants-card">
-                    <a href="pages/restaurant-1.html">
-                    <img class="restaurants-card__image" src="assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
-                    <div class="restaurants-card__content">
-                        <div class="restaurant-card__info">
-                            <p class="restaurants-card--name">Le Gourmand</p>
-                            <p class="restaurants-card--location">Paris</p>
+            <div class="restaurants">
+                <p class="restaurants-headline">restaurants</p>
+                <div class="restaurants-container">
+                    <div class="restaurants-card">
+                        <a href="pages/restaurant-1.html">
+                        <img class="restaurants-card__image" src="assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                        <div class="restaurants-card__content">
+                            <div class="restaurant-card__info">
+                                <p class="restaurants-card--name">Le Gourmand</p>
+                                <p class="restaurants-card--location">Paris</p>
+                            </div>
+                            <div class="restaurants-card__icon"><i class=" fa fa-regular fa-heart fa-hover-hidden"></i>
+                                <i class="fa fa-solid fa-heart fa-hover-show"></i>
+                            </div>
                         </div>
-                        <div class="restaurants-card__icon"><i class=" fa fa-regular fa-heart fa-hover-hidden"></i>
-                            <i class="fa fa-solid fa-heart fa-hover-show"></i>
+                        </a>
+                    </div>    
+                    <div class="restaurants-card">
+                        <a href="pages/restaurant-2.html">
+                        <img class="restaurants-card__image" src="assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                        <div class="restaurants-card__content">
+                            <div class="restaurant-card__info">
+                                <p class="restaurants-card--name">Le Gourmand</p>
+                                <p class="restaurants-card--location">Paris</p>
+                            </div>
+                            <div class="restaurants-card__icon"><i class=" fa fa-regular fa-heart fa-hover-hidden"></i>
+                                <i class="fa fa-solid fa-heart fa-hover-show"></i>
+                            </div>
                         </div>
+                        </a>
                     </div>
-                    </a>
-                </div>    
-                <div class="restaurants-card">
-                    <a href="pages/restaurant-2.html">
-                    <img class="restaurants-card__image" src="assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
-                    <div class="restaurants-card__content">
-                        <div class="restaurant-card__info">
-                            <p class="restaurants-card--name">Le Gourmand</p>
-                            <p class="restaurants-card--location">Paris</p>
+                    <div class="restaurants-card">
+                        <a href="pages/restaurant-3.html">
+                        <img class="restaurants-card__image" src="assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                        <div class="restaurants-card__content">
+                            <div class="restaurant-card__info">
+                                <p class="restaurants-card--name">Le Gourmand</p>
+                                <p class="restaurants-card--location">Paris</p>
+                            </div>
+                            <div class="restaurants-card__icon"><i class=" fa fa-regular fa-heart fa-hover-hidden"></i>
+                                <i class="fa fa-solid fa-heart fa-hover-show"></i>
+                            </div>
                         </div>
-                        <div class="restaurants-card__icon"><i class=" fa fa-regular fa-heart fa-hover-hidden"></i>
-                            <i class="fa fa-solid fa-heart fa-hover-show"></i>
-                        </div>
+                        </a>
                     </div>
-                    </a>
-                </div>
-                <div class="restaurants-card">
-                    <a href="pages/restaurant-3.html">
-                    <img class="restaurants-card__image" src="assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
-                    <div class="restaurants-card__content">
-                        <div class="restaurant-card__info">
-                            <p class="restaurants-card--name">Le Gourmand</p>
-                            <p class="restaurants-card--location">Paris</p>
+                    <div class="restaurants-card">
+                        <a href="pages/restaurant-4.html">
+                        <img class="restaurants-card__image" src="assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                        <div class="restaurants-card__content">
+                            <div class="restaurant-card__info">
+                                <p class="restaurants-card--name">Le Gourmand</p>
+                                <p class="restaurants-card--location">Paris</p>
+                            </div>
+                            <div class="restaurants-card__icon"><i class=" fa fa-regular fa-heart fa-hover-hidden"></i>
+                                <i class="fa fa-solid fa-heart fa-hover-show"></i>
+                            </div>
                         </div>
-                        <div class="restaurants-card__icon"><i class=" fa fa-regular fa-heart fa-hover-hidden"></i>
-                            <i class="fa fa-solid fa-heart fa-hover-show"></i>
-                        </div>
+                        </a>
                     </div>
-                    </a>
-                </div>
-                <div class="restaurants-card">
-                    <a href="pages/restaurant-4.html">
-                    <img class="restaurants-card__image" src="assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
-                    <div class="restaurants-card__content">
-                        <div class="restaurant-card__info">
-                            <p class="restaurants-card--name">Le Gourmand</p>
-                            <p class="restaurants-card--location">Paris</p>
-                        </div>
-                        <div class="restaurants-card__icon"><i class=" fa fa-regular fa-heart fa-hover-hidden"></i>
-                            <i class="fa fa-solid fa-heart fa-hover-show"></i>
-                        </div>
-                    </div>
-                    </a>
                 </div>
             </div>
-        </div>
-    </main>
-    <footer>
-        <div class="footer-container">
-            <ul class="footer-container__items">
-                <li><a href="#"><h2>ohmyfood</h3></a></li>
-                <li><a href="#"><i class="fa-solid fa-utensils"></i> Suggest a restaurant</a></li>
-                <li><a href="#"><i class="fa-solid fa-handshake-angle"></i> Become a partner</a></li>
-                <li><a href="#">Legal</a></li>
-                <li><a href="mailto: abc@example.com">Contact</a></li>
-            </ul>
-        </div>
-    </footer>
-</body>
+        </main>
+        <footer>
+            <div class="footer-container">
+                <ul class="footer-container__items">
+                    <li><a href="#"><h2>ohmyfood</a></li>
+                    <li><a href="#"><i class="fa-solid fa-utensils"></i> Suggest a restaurant</a></li>
+                    <li><a href="#"><i class="fa-solid fa-handshake-angle"></i> Become a partner</a></li>
+                    <li><a href="#">Legal</a></li>
+                    <li><a href="mailto:abc@example.com">Contact</a></li>
+                </ul>
+            </div>
+        </footer>
+    </body>
 </html>
