--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="loader-wrapper">
-        <div class="loader">
+        <div class="loader"></div>
             <div class="spinner"></div>
     </div>
     <header class="primary-header">
@@ -113,11 +113,11 @@
     <footer>
         <div class="footer-container">
             <ul class="footer-container__items">
-                <li><a href="#"><h2>ohmyfood</h3></a></li>
+                <li><a href="#"><h2>ohmyfood</a></li>
                 <li><a href="#"><i class="fa-solid fa-utensils"></i> Suggest a restaurant</a></li>
                 <li><a href="#"><i class="fa-solid fa-handshake-angle"></i> Become a partner</a></li>
                 <li><a href="#">Legal</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="mailto:abc@example.com">Contact</a></li>
             </ul>
         </div>
     </footer>
